@@ -1,0 +1,2 @@
+PQPangram = "The quick brown fox jumps over a lazy dog.";
+PQAlphabet = "ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz 1234567890";
