@@ -7,12 +7,10 @@
 	objects = {
 
 /* Begin PBXBuildFile section */
-		714B92EF0C070CB900F5B7CF /* COPYING in Resources */ = {isa = PBXBuildFile; fileRef = 714B92EE0C070CB900F5B7CF /* COPYING */; };
-		717D53CE0C06571300DE5BBC /* ChangeLog in Resources */ = {isa = PBXBuildFile; fileRef = 717D53CD0C06571300DE5BBC /* ChangeLog */; };
+		717A9B1D0C07C06200F75DB5 /* Localizable.strings in Resources */ = {isa = PBXBuildFile; fileRef = 717A9B1C0C07C06200F75DB5 /* Localizable.strings */; };
 		719DE2A60C0592B100474A48 /* MainMenu.nib in Resources */ = {isa = PBXBuildFile; fileRef = 719DE2A50C0592B100474A48 /* MainMenu.nib */; };
 		719DE2AE0C05986400474A48 /* PQSampleController.m in Sources */ = {isa = PBXBuildFile; fileRef = 719DE2AD0C05986400474A48 /* PQSampleController.m */; };
 		719DE2B10C05987700474A48 /* PQController.m in Sources */ = {isa = PBXBuildFile; fileRef = 719DE2B00C05987700474A48 /* PQController.m */; };
-		71C9C5150C0675CC0040458A /* message.txt in Resources */ = {isa = PBXBuildFile; fileRef = 71C9C5140C0675CC0040458A /* message.txt */; };
 		71E420F00C062B90003CEA47 /* PQFontFamily.m in Sources */ = {isa = PBXBuildFile; fileRef = 71E420EF0C062B90003CEA47 /* PQFontFamily.m */; };
 		8D15AC2F0486D014006FF6A4 /* InfoPlist.strings in Resources */ = {isa = PBXBuildFile; fileRef = 089C165FFE840EACC02AAC07 /* InfoPlist.strings */; };
 		8D15AC320486D014006FF6A4 /* PQMain.m in Sources */ = {isa = PBXBuildFile; fileRef = 2A37F4B0FDCFA73011CA2CEA /* PQMain.m */; settings = {ATTRIBUTES = (); }; };
@@ -41,6 +39,7 @@
 		2A37F4C4FDCFA73011CA2CEA /* AppKit.framework */ = {isa = PBXFileReference; lastKnownFileType = wrapper.framework; name = AppKit.framework; path = /System/Library/Frameworks/AppKit.framework; sourceTree = "<absolute>"; };
 		2A37F4C5FDCFA73011CA2CEA /* Foundation.framework */ = {isa = PBXFileReference; lastKnownFileType = wrapper.framework; name = Foundation.framework; path = /System/Library/Frameworks/Foundation.framework; sourceTree = "<absolute>"; };
 		714B92EE0C070CB900F5B7CF /* COPYING */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = COPYING; sourceTree = "<group>"; };
+		717A9B1A0C07C05700F75DB5 /* English */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text.plist.strings; name = English; path = English.lproj/Localizable.strings; sourceTree = "<group>"; };
 		717D53CD0C06571300DE5BBC /* ChangeLog */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text; path = ChangeLog; sourceTree = "<group>"; };
 		719DE29E0C05929500474A48 /* English */ = {isa = PBXFileReference; lastKnownFileType = wrapper.nib; name = English; path = English.lproj/MainMenu.nib; sourceTree = "<group>"; };
 		719DE2AC0C05986400474A48 /* PQSampleController.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = PQSampleController.h; sourceTree = "<group>"; };
@@ -52,7 +51,7 @@
 		71E420EE0C062B90003CEA47 /* PQFontFamily.h */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.h; path = PQFontFamily.h; sourceTree = "<group>"; };
 		71E420EF0C062B90003CEA47 /* PQFontFamily.m */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = sourcecode.c.objc; path = PQFontFamily.m; sourceTree = "<group>"; };
 		8D15AC360486D014006FF6A4 /* Info.plist */ = {isa = PBXFileReference; fileEncoding = 4; lastKnownFileType = text.plist; path = Info.plist; sourceTree = "<group>"; };
-		8D15AC370486D014006FF6A4 /* Font Manager.app */ = {isa = PBXFileReference; includeInIndex = 0; lastKnownFileType = wrapper.application; path = "Font Manager.app"; sourceTree = BUILT_PRODUCTS_DIR; };
+		8D15AC370486D014006FF6A4 /* Font Manager.app */ = {isa = PBXFileReference; explicitFileType = wrapper.application; includeInIndex = 0; path = "Font Manager.app"; sourceTree = BUILT_PRODUCTS_DIR; };
 /* End PBXFileReference section */
 
 /* Begin PBXFrameworksBuildPhase section */
@@ -132,9 +131,10 @@
 				719DE2A50C0592B100474A48 /* MainMenu.nib */,
 				8D15AC360486D014006FF6A4 /* Info.plist */,
 				089C165FFE840EACC02AAC07 /* InfoPlist.strings */,
+				717A9B1C0C07C06200F75DB5 /* Localizable.strings */,
 				717D53CD0C06571300DE5BBC /* ChangeLog */,
-				71C9C5140C0675CC0040458A /* message.txt */,
 				714B92EE0C070CB900F5B7CF /* COPYING */,
+				71C9C5140C0675CC0040458A /* message.txt */,
 			);
 			name = Resources;
 			sourceTree = "<group>";
@@ -199,9 +199,7 @@
 			files = (
 				8D15AC2F0486D014006FF6A4 /* InfoPlist.strings in Resources */,
 				719DE2A60C0592B100474A48 /* MainMenu.nib in Resources */,
-				717D53CE0C06571300DE5BBC /* ChangeLog in Resources */,
-				71C9C5150C0675CC0040458A /* message.txt in Resources */,
-				714B92EF0C070CB900F5B7CF /* COPYING in Resources */,
+				717A9B1D0C07C06200F75DB5 /* Localizable.strings in Resources */,
 			);
 			runOnlyForDeploymentPostprocessing = 0;
 		};
@@ -228,6 +226,14 @@
 				089C1660FE840EACC02AAC07 /* English */,
 			);
 			name = InfoPlist.strings;
+			sourceTree = "<group>";
+		};
+		717A9B1C0C07C06200F75DB5 /* Localizable.strings */ = {
+			isa = PBXVariantGroup;
+			children = (
+				717A9B1A0C07C05700F75DB5 /* English */,
+			);
+			name = Localizable.strings;
 			sourceTree = "<group>";
 		};
 		719DE2A50C0592B100474A48 /* MainMenu.nib */ = {
