@@ -1,4 +1,10 @@
 2007-05-25  Isaiah Beerbower <ipaqah@tm.net>
+	* PQController.m ([-awakeFromNib]): Updates font sample after nib is loaded.
+	* PQSampleController.m: Added -controlTextDidEndEditing: method.
+	* PQSampleController.m: Default sample text is moved to Localizable.strings.
+	* English.lproj/Localizable.strings: See above.
+
+2007-05-25  Isaiah Beerbower <ipaqah@tm.net>
 	* COPYING: Added license.
 	* PQSampleController.*: Sampling is now implemented.
 	* PQController.*: Now handles the font sample controller.
